--- a/tal-hybrid-styles.css
+++ b/tal-hybrid-styles.css
@@ -174,9 +174,6 @@ li span {
     font-size: 24px;
     line-height: 1.75rem;
     padding-right: 2rem;
-    animation-name: pulse;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
 }
 
 .rewards-copy>p {
@@ -463,7 +460,7 @@ footer {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 2rem 15rem;
+        padding: 1rem 15rem;
     }
 
     .header-logo-product {
@@ -513,7 +510,7 @@ footer {
     }
 
     .banner {
-        height: 600px;
+        height: 700px;
         background-image: url(https://i.imgur.com/PmqJwM1.jpeg);
         background-position: center;
         background-size: cover;
@@ -568,7 +565,7 @@ footer {
 
     .quote-form-img {
         position: absolute;
-        top: 12rem;
+        top: 30rem;
         right: 15rem;
         z-index: 100;
     }
@@ -762,10 +759,32 @@ footer {
     .footer-nav-contents {
         margin: 0px 0px 15px 0px;
         padding-left: 0;
+        width: 100%;
         }
 
     .footer-nav-contents>p {
         line-height: 1.15rem;
+    }
+    
+    #footer-nav-contents-col-1 {
+        display: flex;
+        flex-direction: row;
+        justify-content:space-between;
+        align-items: center;
+    }
+    
+    #footer-nav-contents-col-1 img {
+        height: 30px;
+        width: auto;
+        padding-bottom: 0;
+    }
+    
+    #footer-nav-contents-col-1 #digicert-logo {
+        height: 50px;
+    }
+
+    .footer-links>a {
+        padding-right: 1.25rem;
     }
 
 }
