--- a/tal-hybrid-styles.css
+++ b/tal-hybrid-styles.css
@@ -77,6 +77,10 @@ a {
     font-weight: 500;
 }
 
+.footer-nav-contents>p a {
+    border-bottom: #80C342 1px solid;
+}
+
 li {
     list-style: disc;
     color: #80C342;
@@ -88,6 +92,14 @@ li span {
     line-height: 1rem;
     font-weight: 400;
     padding-left: -10px;
+}
+
+sup a {
+    color: #80C342;
+}
+
+.fa-regular {
+    color: #f15a24;
 }
 
 @keyframes pulse {
@@ -184,6 +196,7 @@ li span {
     border-radius: 0.25rem;
     text-transform: uppercase;
     padding: 0.75rem;
+    font-weight: 700;
 }
 
 .rewards {
@@ -392,16 +405,17 @@ input[placeholder] {
 
 .about-tal-faqs .accordion-item {
     padding: 0;
-    margin-bottom: 0.25rem;
+    margin-bottom: 0;
 }
 
 .about-tal-faqs .accordion-header {
-    padding-left: 0;
+    padding: 0;
 }
 
 .about-tal-faqs .accordion-button:not(collapsed) {
     background-color: white;
     color: #303E46;
+    border-color: none;
 }
 
 .about-tal-faqs .accordion-button::after {
@@ -418,27 +432,8 @@ input[placeholder] {
     border-bottom: 1px solid #80C342;
 }
 
-.about-tal-faqs .static-accordion {
-    border: white solid 0.1rem;
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    padding: 0.5rem 0;
-}
-
-.about-tal-faqs .static-accordion p, .about-tal-faqs h2 {
+.about-tal-faqs h2 {
     color: white;
-}
-
-.about-tal-faqs .static-accordion img {
-    height: 30px;
-    width: auto;
-    padding-top: 0.5rem;
-    padding-right: 0.5rem;
 }
 
 .about-tal-why {
@@ -633,19 +628,24 @@ footer {
     .rewards {
         background-color: #303E46;
         padding: 2rem 15rem;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
     }
 
     .rewards img {
         height: 60px;
         width: auto;
-        padding: 0;
+        padding: 10px 0 0 0;
     }
 
     .rewards-icon {
-        width: 5%;
+        width: 4%;
     }
 
     .rewards-copy {
+        display: flex;
+        flex-direction: column;
         width: 50%;
         padding: 0;
     }
@@ -658,7 +658,7 @@ footer {
 
     .quote-form-img {
         position: absolute;
-        top: 30rem;
+        top: 15rem;
         right: 15rem;
         z-index: 100;
     }
@@ -831,29 +831,12 @@ footer {
         border-bottom: 1px solid #80C342;
     }
 
-    .about-tal-faqs .static-accordion {
-        border: none;
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        margin: 1rem 0;
-        border-radius: 0.25rem;
-    }
-
-    .about-tal-faqs .static-accordion p, .about-tal-faqs h2 {
+    .about-tal-faqs h2 {
         color: #303e46;
     }
 
     .about-tal-faqs h2, .about-tal-why h2 {
         padding-left: 0;
-    }
-
-    .about-tal-faqs .static-accordion img {
-        height: 20px;
-        width: auto;
-        padding-right: 1rem;
     }
 
     .about-tal-why-info {
