--- a/tal-hybrid-styles.css
+++ b/tal-hybrid-styles.css
@@ -153,7 +153,7 @@ sup a {
 
 .banner {
     height: 600px;
-    background-image: url(https://i.imgur.com/h0s1FbL.jpg);
+    background-image: url(https://i.imgur.com/1DKgBLs.jpeg);
     background-position: center;
     background-size: cover;
     background-position-x: 35%;
@@ -600,7 +600,7 @@ footer {
 
     .banner {
         height: 700px;
-        background-image: url(https://i.imgur.com/h0s1FbL.jpg);
+        background-image: url(https://i.imgur.com/1DKgBLs.jpeg);
         background-position-y: 75%;
         background-size: cover;
         display: flex;
