--- a/tal-hybrid-styles.css
+++ b/tal-hybrid-styles.css
@@ -123,12 +123,16 @@ sup a {
     padding-bottom: 0.75rem;
 }
 
+.slash {
+    display: none;
+}
+
 .header-product>h1 {
     font-size: x-large;
     color: white;
     line-height: 0.75rem;
     display: inline-block;
-    padding: 0.75rem 0.15rem 1rem 0.15rem;
+    padding: 0.75rem 0.15rem 1.15rem 0.15rem;
 }
 
 .header-awards {
@@ -555,14 +559,24 @@ footer {
     }
 
     .header-logo {
-        border-right: #7CBC34;
+        border-right: none;
         border-style: solid;
         border-width: 0 0.15rem 0 0;
-        padding: 0.5rem 1.5rem 0.5rem 1rem;
+        padding: 0.5rem 0.5rem 0rem 1rem;
+    }
+
+    .slash {
+        display: inline;
+        justify-content: center;
+        color: #7CBC34;
+        font-weight: 200;
+        font-size: 3.25rem;
+        padding: 0 0 0.75rem 0;
     }
 
     .header-product>h1 {
-        padding: 0.35rem 0.5rem;
+        padding: 0.3rem 0.15rem;
+        font-size: larger;
     }
 
     .header-product {
